Ticket Edit, Ticket Detail, Ticket Histories Helper Project Details

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -199,8 +199,8 @@
                                                     {
                                                         <td>
 
-                                                            @Html.ActionLink("Edit", "Edit", "Tickets", new { id = item.Id }, null)
-                                                            @*@Html.ActionLink("Details", "Details", "Tickets", new { id = item.Id }, null)*@
+                                                            @*@Html.ActionLink("Edit", "Edit", "Tickets", new { id = item.Id }, null)*@
+                                                            @Html.ActionLink("Details", "Details", "Tickets", new { id = item.Id }, null)
                                                         </td>
                                                     }
                                                 </tr>
@@ -281,8 +281,8 @@
                                                         @*@item.Updated.GetValueOrDefault().ToString("MMM dd, yyyy")*@
                                                     </td>
                                                     <td>
-                                                        @Html.ActionLink("Edit", "Edit", "Tickets", new { id = item.Id }, null)
-                                                        @*@Html.ActionLink("Details", "Details", "Tickets", new { id = item.Id }, null)*@
+                                                        @*@Html.ActionLink("Edit", "Edit", "Tickets", new { id = item.Id }, null)*@
+                                                        @Html.ActionLink("Details", "Details", "Tickets", new { id = item.Id }, null)
                                                     </td>
                                                 </tr>
                                             }
@@ -358,7 +358,7 @@
                                                             @*@item.Updated.GetValueOrDefault().ToString("MMM dd, yyyy")*@
                                                         </td>
                                                         <td>
-                                                            @Html.ActionLink("Edit", "Edit", "Tickets", new { id = item.Id }, null)
+                                                            @*@Html.ActionLink("Edit", "Edit", "Tickets", new { id = item.Id }, null)*@
                                                             @*@Html.ActionLink("Details", "Details", "Tickets", new { id = item.Id }, null)*@
                                                         </td>
                                                     </tr>
