--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@using AntTrak.Models
 @model Ticket
 
-    <div class="row">
-        <div class="col">
-            <div class="row">
+    <div class="container">
+        <div class="row">
+            <div class="col">
                 <div class="card card-blue">
                     <div class="card-header">
                         <h4 class="card-title">@ViewBag.CardTitle</h4>
@@ -24,75 +24,57 @@
                             @Html.HiddenFor(Model => Model.TicketStatusId)
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="row">
-                                @*row for select input*@
-                                <div class="col">
-                                    <div class="row">
-                                        @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
-                                        <div class="col-md-10">
-                                            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                                            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-6">
-                                            @if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
-                                            {
-                                                @Html.DropDownList("DeveloperId", null, "Unassigned", new { @class = "form-control" })
-                                                @Html.ValidationMessageFor(model => model.DeveloperId, "", new { @class = "text-danger" })
-                                            }
-                                            else
-                                            {
-                                                <p>Developer: @Model.Developer.Fullname</ p >
-                                            }
-                                        </div>
-                                        <div class="col-6">
-                                            @if (User.IsInRole("Submitter"))
-                                            {
-
-                                                var status = ModelBinde
-                                                <p>Status:  @model.     </p>
-                                            }
-                                            else
-                                            {
-                                                @Html.DropDownList("TicketStatusId", null, null, new { @class = "form-control" })
-                                            }
-
-                                            @Html.ValidationMessageFor(model => model.TicketStatusId, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                        <div class="row">
-                                            <div class="col">
-                                                @Html.DropDownList("TicketPriorityId", null, null, new { @class = "form-control" })
-                                                @Html.ValidationMessageFor(model => model.TicketPriorityId, "", new { @class = "text-danger" })
-                                            </div>
-                                            <div class="col">
-                                                @Html.DropDownList("TicketTypeId", null, null, new { @class = "form-control" })
-                                                @Html.ValidationMessageFor(model => model.TicketTypeId, "", new { @class = "text-danger" })
-                                                <br />
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col">
-                                                <div class="row">
-                                                    @Html.Label("Submitter")
-                                                </div>
-                                                <div class="row">
-                                                    @Model.Submitter.Fullname
-                                                </div>
-                                            </div>
-                                            
-                                        <div class="col">
-                                            <div class="row">
-                                                @Html.Label("Created")
-                                            </div>
-                                            <div class="row">
-                                                @Model.Created.ToString("MMM, dd, yyyy")
-                                            </div>
-                                        </div>
-                                        </div>
-                                    
+                                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                                 </div>
-                            </div> @*row for select column*@
+                            </div>
+                            @*<div class="row">*@
+                            @*row for select input*@
+                            <div class="row">
+                                <div class="col-6">
+                                    @if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
+                                    {
+                                        @Html.DropDownList("DeveloperId", null, "Unassigned", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.DeveloperId, "", new { @class = "text-danger" })
+                                    }
+                                    @if (User.IsInRole("Developer") || User.IsInRole("Submitter"))
+                                    {
+                                    <p>@Html.Label("Developer"): @Model.Developer.Fullname</p> 
+                                    }
+                                </div>
+                                <div class="col-6">
+                                    @if (User.IsInRole("Submitter"))
+                                    {
+                                    <p>@Html.Label("Status") @Model.TicketStatus.Name</p> 
+                                    }
+                                    else
+                                    {
+                                        @Html.DropDownList("TicketStatusId", null, null, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.TicketStatusId, "", new { @class = "text-danger" })
+                                    }
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    @Html.DropDownList("TicketPriorityId", null, null, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.TicketPriorityId, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="col">
+                                    @Html.DropDownList("TicketTypeId", null, null, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.TicketTypeId, "", new { @class = "text-danger" })
+                                    <br />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <p>@Html.Label("Submitter"): @Model.Submitter.Fullname</p>
+                                </div>
+                                <div class="col">
+                                    <p>@Html.Label("Created"): @Model.Created.ToString("MMM, dd, yyyy")</p>
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col">
                                     @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-5" })
@@ -110,12 +92,12 @@
                                     <input type="submit" value="Save" class="form-control btn btn-primary" />
                                 </div>
                                 <div class="col">
-                                    @Html.ActionLink("Back to List", "Index", null, new { @class = "form-control btn btn-dark" })
+                                    @Html.ActionLink("Back to List", "Dashboard", "Home", null, new { @class = "form-control btn btn-dark" })
                                 </div>
                             </div>
                         </div> <!-- /.card-footer-->
                     }
                 </div><!-- /.card -->
-            </div>           
-        </div> @*top row of cards*@     
-    </div>
+            </div>
+        </div>   @*top row of cards*@
+    </div>  @*Container*@ 
