--- a/Views/Shared/_SideNav.cshtml
+++ b/Views/Shared/_SideNav.cshtml
@@ -15,7 +15,7 @@
         <!-- Sidebar user panel (optional) -->
         @if (User.Identity.IsAuthenticated)
         {
-            
+
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 <div class="image">
                     <img src="~/Uploads/Tfrid-img.jpg" class="img-circle elevation-2" alt="User Image">
@@ -28,69 +28,133 @@
             </div>
         }
         <!-- Sidebar Menu -->
-        <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="true">
-                <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
-                <li class="nav-item has-treeview menu-open">
-                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link active">
-                        <i class="nav-icon fas fa-hospital-alt"></i>
+    <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="true">
+            <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
+            @*<li class="nav-item has-treeview menu-open">
+            <a href="@Url.Action("Dashboard", "Home")" class="nav-link active">
+                <i class="nav-icon fas fa-hospital-alt"></i>
+                <p>
+                    Dashboard
+                </p>
+            </a>
+        </li>*@
+            <li class="nav-item">
+                <a href="@Url.Action("Dashboard", "Home")" class="nav-link">
+                    <i class="nav-icon fas fa-hospital-alt"></i>
+                    <p>
+                        Dashboard
+                    </p>
+                </a>
+            </li>
+            @if (User.IsInRole("Admin"))
+            {
+                <li class="nav-item has-treeview">
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon fas fa-users"></i>
                         <p>
-                            Dashboard
+                            Users
+                            <i class="right fas fa-angle-left"></i>
+                        </p>
+                    </a>
+
+                    <ul class="nav nav-treeview">
+                        @*<li class="nav-item">
+                            <a href="pages/charts/inline.html" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>View All Users</p>
+                            </a>
+                    </li>*@
+                        <li class="nav-item">
+                            <a href="@Url.Action("ManageRoles", "Admin")" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Role Assignment</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("ManageProjectAssignments", "Projects")" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Project Assignment</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            }
+
+
+            @if (User.IsInRole("Developer") || User.IsInRole("Submitter"))
+            {
+                <li class="nav-item">
+                    <a href="@Url.Action("Index", "Projects")" class="nav-link">
+                        <i class="fas fa-people-carry"></i>
+                        <p>
+                            Projects
                         </p>
                     </a>
                 </li>
-                @if (User.IsInRole("Admin"))
-                {
-                    <li class="nav-item has-treeview menu-open">                      
-                        <i class="nav-icon fas fa-users"></i>
-                        <p> Users <i class="nav-link right fas fa-angle-left"></i></p>
-
-                        <ul class="nav nav-treeview">
-
-                            <li class="nav-item">
-                                <a href="@Url.Action("ManageRoles", "Admin")" class="nav-link active">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Role Assignment</p>
-                                </a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a href="@Url.Action("ManageProjectAssignments", "Projects")" class="nav-link active">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>Project Assignment</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                }
-            </ul>
-            
-                @*<ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="true">*@
-                    <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
-                    
-                @*</ul>*@
-         
+            }
             @if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
             {
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                    <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
+                <li class="nav-item has-treeview">
+                    <a href="#" class="nav-link">
+                        <i class="nav-icon fas fa-people-carry"></i>
+                        <p>
+                           Projects
+                            <i class="right fas fa-angle-left"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        @if (User.IsInRole("ProjectManager"))
+                        {
+                            <li class="nav-item">
+                                <a href="@Url.Action("Index", "Projects")" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>My Projects</p>
+                                </a>
+                            </li>
+                        }
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Projects")" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Active Project</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Projects")" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>All Project</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("ManageProjectAssignments", "Projects")" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Project Assignment</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            }
+                        @*@if (User.IsInRole("Admin") || User.IsInRole("ProjectManager"))
+            {*@
+                @*<ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                    
                     <li class="nav-item has-treeview menu-open">
                         <a href="@Url.Action("ManageProjectAssignments", "Projects")" class="nav-link active">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
-                            <p> Manage Project Assignment@*<i class="right fas fa-angle-left"></i>*@</p>
+                            <p> Manage Project Assignment</p>
                         </a>
                     </li>
                 </ul>
             }
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
+                
                 <li class="nav-item has-treeview menu-open">
                     <a href="@Url.Action("Index", "Projects")" class="nav-link active">
                         <i class="fas fa-people-carry"></i>
-                        <p> Projects@*<i class="right fas fa-angle-left"></i>*@</p>
+                        <p> Projects</p>
                     </a>
                 </li>
-            </ul>
+            </ul>*@
             @if (User.IsInRole("Submitter"))
             {
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="true">
@@ -106,7 +170,7 @@
 
                 </ul>
             }
-        </nav>
+</nav>
         <!-- /.sidebar-menu -->
     </div>
     <!-- /.sidebar -->
