--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -16,7 +16,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            @using (Html.BeginForm("Create", "Tickets", FormMethod.Post, new { enctype = "Multipart/form-data" }))
+                            @using (Html.BeginForm("Create", "Tickets", FormMethod.Post))
                             {
                                 @Html.AntiForgeryToken()
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -66,14 +66,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col">
+                                @*<div class="col">
                                     <div class="form-group">
                                         @Html.LabelFor(model => model.Attachments, htmlAttributes: new { @class = "control-label col-md-2" })
                                         <div class="col-md-10">
                                             <input name="Attachment" type="file" class="form-control" id="fileUpload" />
                                         </div>
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="row">
                                     <br />
                                     <div class="col-8"></div>
